<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_bienvenida"
            android:id="@+id/textViewBienvenida"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorLabelBlue"
            android:textSize="18dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/RelativeProfesor"
            android:layout_below="@+id/textViewBienvenida"
            android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_profesor"
                    android:id="@+id/textViewProfesor"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextUsuario"
                    android:layout_below="@+id/textViewProfesor"
                    android:hint="Usuario"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextClave"
                    android:layout_below="@+id/editTextUsuario"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_btn_loguin"
                    android:id="@+id/buttonProfesor"
                    android:layout_below="@+id/editTextClave"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/border_button"
                    android:textColor="@color/colorWhite"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:id="@+id/RelativeEstudiante"
            android:layout_below="@+id/RelativeProfesor"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_btn_estudiante"
                android:id="@+id/buttonEstudiante"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/border_button"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
